# route-info-builder

./: Cargo.toml  README.md
src/: lib.rs
src/config/: mod.rs  naming.rs
src/generators/: mod.rs  rust.rs
src/generators/typescript/: client.rs  hooks.rs  imports.rs  mod.rs
src/parser/: handlers.rs  mod.rs
src/utils/: case.rs  mod.rs  path.rs
