[package]
name = "route-info-builder"
version = "0.1.0"
edition = "2024"
description = "Build-time route scanner for Axum-like frameworks"
license = "MIT"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
convert_case = "0.9.0"
